Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/nested/5009484/Y.out
Y.java:12:18: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: T, Y<T>)
1 error
